# df-eval

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  conf.py  index.md  index.rst
docs/examples/: README.txt  basic_engine_usage.py  error_handling_and_debugging.py  lookup_engine_integration.py  lookup_pandera_pipeline.py  pandera_integration.py  parquet_out_of_memory.py  performance_and_scalability.py
docs/reference/: api.rst
docs/user_guide/: advanced_usage.md  advanced_usage.rst  basic_usage.md  basic_usage.rst  index.md  index.rst  lookups.md  lookups.rst
src/df_eval/: __init__.py  engine.py  expr.py  functions.py  lookup.py  pandera.py  parquet.py
src/df_eval/utils/: pandera_io_compat.py
tests/: test_engine.py  test_engine_enhanced.py  test_engine_lookups.py  test_engine_parquet.py  test_expr.py  test_expr_enhanced.py  test_functions.py  test_lookup.py  test_pandera.py  test_parquet.py  test_safe_functions.py
